# plushie-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile  mise.toml
crates/cargo-plushie/: Cargo.toml  README.md
crates/cargo-plushie/src/: cli.rs  default_icons.rs  discover.rs  doctor.rs  download.rs  generator.rs  gitignore_hint.rs  lib.rs  main.rs  package.rs  package_assemble.rs  package_runtime.rs  package_rust.rs  patch_config.rs  platform.rs  scaffold.rs  tool_identity.rs
crates/cargo-plushie/tests/: end_to_end.rs  package_assemble.rs  package_launcher.rs  workspace_generation.rs
crates/plushie/: AGENTS.md  Cargo.toml  README.md
crates/plushie-core/: AGENTS.md  Cargo.toml  README.md
crates/plushie-core-macros/: Cargo.toml  README.md
crates/plushie-core-macros/src/: lib.rs
crates/plushie-core/src/: codec_safety.rs  diagnostic.rs  diagnostics.rs  event_type.rs  key.rs  lib.rs  ops.rs  outgoing_message.rs  pointer.rs  selector.rs  settings.rs  spec.rs  tool_identity.rs  tree_walk.rs  widget_builder.rs
crates/plushie-core/tests/: selector_proptest.rs  types_public_api.rs  widget_macro.rs
crates/plushie-renderer/: Cargo.toml  README.md  build.rs
crates/plushie-renderer-engine/: Cargo.toml  README.md
crates/plushie-renderer-engine/src/: codec.rs  engine.rs  lib.rs  tree.rs
crates/plushie-renderer-lib/: Cargo.toml  README.md
crates/plushie-renderer-lib/src/: app.rs  apply.rs  constants.rs  emitter.rs  emitters.rs  events.rs  execute.rs  lib.rs  scripting.rs  settings.rs  subscriptions.rs  update.rs  view.rs  widget_ops.rs  window_map.rs  window_ops.rs
crates/plushie-renderer-lib/tests/: disabled_interception.rs  effect_validation.rs  pipeline_audit.rs  widget_subscription_dispatch.rs
crates/plushie-renderer-wasm/: Cargo.toml  README.md
crates/plushie-renderer-wasm/src/: lib.rs  output.rs
crates/plushie-renderer/src/: effects.rs  env.rs  headless.rs  lib.rs  main.rs  output.rs  startup.rs  transport.rs
crates/plushie-renderer/tests/: canvas_focus.rs  effect_dispatch.rs  required_widgets.rs  session_multiplexing.rs  window_ops_subprocess.rs
crates/plushie-widget-sdk/: AGENTS.md  Cargo.toml  README.md
crates/plushie-widget-sdk/src/: a11y.rs  app.rs  canvas_engine.rs  codec.rs  engine.rs  fonts.rs  iced_convert.rs  image_registry.rs  lib.rs  message.rs  prelude.rs  prop_helpers.rs  registry.rs  render_ctx.rs  runtime.rs  shared_state.rs  svg_guard.rs  testing.rs  theming.rs  tree.rs  validate.rs
crates/plushie-widget-sdk/tests/: builtin_type_names.rs  doc_examples.rs  doc_examples_stateful.rs
crates/plushie/examples/: README.md  async_fetch.rs  clock.rs  color_picker.rs  counter.rs  gallery.rs  notes.rs  rate_plushie.rs  shortcuts.rs  todo.rs
crates/plushie/src/: cli.rs  command.rs  derive_support.rs  error.rs  event.rs  lib.rs  prelude.rs  query.rs  route.rs  selection.rs  settings.rs  state.rs  subscription.rs  test.rs  types.rs  undo.rs  widget.rs
crates/plushie/tests/: a11y_test.rs  app_test.rs  async_contract_test.rs  automation_replay_windowed.rs  automation_test.rs  command_test.rs  derive_event_test.rs  derive_widget_test.rs  doc_examples.rs  event_test.rs  golden_test.rs  multi_window_test.rs  no_runner_features.rs  subscription_test.rs  touch_test.rs  tree_diff_proptest.proptest-regressions  tree_diff_proptest.rs  types_test.rs  ui_test.rs  util_test.rs  widget_intercept_test.rs  widget_test.rs  wire_connect.rs  wire_hot_reload.rs  wire_image_ops.rs  wire_load_font.rs  wire_mode.rs
plushie/: Cargo.toml
plushie-core/: Cargo.toml
plushie-core/src/: lib.rs  ops.rs  scoped_id.rs  settings.rs  spec.rs  widget_builder.rs
plushie-core/src/animation/: easing.rs  mod.rs
plushie-core/src/protocol/: incoming.rs  mod.rs  outgoing.rs  props.rs  types.rs
plushie-core/src/types/: a11y.rs  alignment.rs  animatable.rs  background.rs  border.rs  color.rs  font.rs  gradient.rs  input.rs  interaction.rs  layout.rs  length.rs  mod.rs  padding.rs  range.rs  shadow.rs  style.rs  text.rs  theme.rs
plushie-ext/: Cargo.toml
plushie-ext/src/: app.rs  canvas_engine.rs  engine.rs  extension_adapter.rs  extensions.rs  lib.rs  message.rs  prelude.rs  prop_helpers.rs  registry.rs  render_ctx.rs  shared_state.rs  testing.rs  tree.rs  validate.rs
plushie-ext/src/animation/: color.rs  easing.rs  ghost.rs  mod.rs  spring.rs  timed.rs
plushie-ext/src/protocol/: incoming.rs  mod.rs  outgoing.rs  types.rs
plushie-ext/src/widget/: a11y.rs  button_widget.rs  caches.rs  canvas_widget.rs  checkbox_widget.rs  column_widget.rs  combo_box_widget.rs  grid_widget.rs  helpers.rs  image_widget.rs  markdown_widget.rs  mod.rs  progress_bar_widget.rs  radio_widget.rs  render.rs  rich_text_widget.rs  rule_widget.rs  stack_widget.rs  text_editor_widget.rs  text_input_widget.rs  text_widget.rs  tooltip_widget.rs  validate.rs  widget_set.rs  window_widget.rs
plushie-ext/src/widgets/: a11y.rs  builtins.rs  button_widget.rs  caches.rs  canvas.rs  checkbox_widget.rs  column_widget.rs  combo_box_widget.rs  container_widget.rs  display.rs  float_widget.rs  input.rs  (+37 more)
plushie-ext/tests/: doc_examples.rs
plushie-renderer-lib/: Cargo.toml
plushie-renderer-lib/src/: app.rs  apply.rs  constants.rs  effects.rs  emitter.rs  emitters.rs  events.rs  execute.rs  lib.rs  message_processing.rs  scripting.rs  settings.rs  subscriptions.rs  update.rs  view.rs  widget_ops.rs  window_map.rs  window_ops.rs
plushie-renderer-wasm/: Cargo.toml
plushie-renderer-wasm/src/: effects.rs  lib.rs
plushie-widget-macros/: Cargo.toml
plushie-widget-macros/src/: lib.rs
plushie/examples/: README.md  async_fetch.rs  canvas_drawing.rs  clock.rs  color_picker.rs  counter.rs  custom_theme.rs  gallery.rs  multi_window.rs  notes.rs  rate_plushie.rs  shortcuts.rs  todo.rs
plushie/src/: command.rs  event.rs  lib.rs  prelude.rs  settings.rs  subscription.rs  test.rs  types.rs  widget.rs
plushie/tests/: app_test.rs  command_test.rs  derive_event_test.rs  derive_widget_test.rs  event_test.rs  types_test.rs  ui_test.rs  util_test.rs  widget_test.rs
(+359 files in other folders)
