[workspace]
members = [
    "crates/plushie",
    "crates/plushie-core",
    "crates/plushie-core-macros",
    "crates/plushie-widget-sdk",
    "crates/plushie-renderer-lib",
    "crates/plushie-renderer",
    "crates/plushie-renderer-wasm",
]
resolver = "2"

[workspace.package]
version = "0.6.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plushie-ui/plushie-rust"
authors = ["Daniel Hedlund <daniel@digitree.org>"]
keywords = ["gui", "desktop", "framework", "native", "iced"]
categories = ["gui", "rendering"]

[workspace.dependencies]
thiserror = "2"
parking_lot = "0.12"

# Lint configuration. CI also passes RUSTFLAGS="-D warnings" (via justfile)
# which promotes ALL warnings to errors. The lints below catch things that
# should always be errors regardless of CI, and survive Rust toolchain
# upgrades (unlike the brittle #![deny(warnings)] crate attribute).
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_patterns = "deny"

[workspace.lints.clippy]
# CI promotes all warnings to errors via RUSTFLAGS="-D warnings" in the
# justfile. Specific clippy denials go here only when they should block
# local development too (not just CI).

# Shipping profile for optimized artifacts. CI and release-build
# pipelines use `cargo build --profile dist`; local `cargo run
# --release` and `cargo test --release` stay on the default
# `release` profile so dev iteration remains fast.
#
# Native crates get `opt-level = 3` (speed); the WASM crate overrides
# to `opt-level = "z"` (size wins for wasm bundles). See
# `docs/wasm-build.md` for WASM-specific size measurements.
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dist.package.plushie-renderer-wasm]
opt-level = "z"

# Local development: uncomment to use the local plushie-iced checkout
# so renderer builds pick up unpublished iced changes.
[patch.crates-io]
plushie-iced = { path = "../plushie-iced" }
plushie-iced-core = { path = "../plushie-iced/core" }
plushie-iced-graphics = { path = "../plushie-iced/graphics" }
plushie-iced-runtime = { path = "../plushie-iced/runtime" }
plushie-iced-widget = { path = "../plushie-iced/widget" }
plushie-iced-renderer = { path = "../plushie-iced/renderer" }
plushie-iced-winit = { path = "../plushie-iced/winit" }
plushie-iced-test = { path = "../plushie-iced/test" }
plushie-iced-futures = { path = "../plushie-iced/futures" }
