[workspace]
members = [
    "crates/cargo-plushie",
    "crates/plushie",
    "crates/plushie-core",
    "crates/plushie-core-macros",
    "crates/plushie-widget-sdk",
    "crates/plushie-renderer-engine",
    "crates/plushie-renderer-lib",
    "crates/plushie-renderer",
    "crates/plushie-renderer-wasm",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/plushie-ui/plushie-rust"
authors = ["Daniel Hedlund <daniel@digitree.org>"]
keywords = ["gui", "desktop", "framework", "native", "iced"]
categories = ["gui", "rendering"]

[workspace.dependencies]
# Internal crates. Path + version so `.workspace = true` on a path dep
# resolves the local source at build time and the crates.io version at
# publish time. Bumping the workspace version only requires editing
# `[workspace.package].version` and these entries.
plushie-core = { version = "0.7.0", path = "crates/plushie-core" }
plushie-core-macros = { version = "0.7.0", path = "crates/plushie-core-macros" }
plushie-widget-sdk = { version = "0.7.0", path = "crates/plushie-widget-sdk" }
plushie-renderer-engine = { version = "0.7.0", path = "crates/plushie-renderer-engine" }
plushie-renderer-lib = { version = "0.7.0", path = "crates/plushie-renderer-lib" }

# Shared external deps. Per-crate manifests opt in with `.workspace = true`.
# Entries that need different feature sets per consumer (tokio, iced)
# declare a bare version here and let each crate specify features.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"
sha2 = "0.10"
tokio = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# iced ships through a fork; per-crate feature sets diverge so the
# workspace entry just declares the bare version (matching the tokio
# precedent above). Each crate adds its own feature list.
iced = { version = "0.8", package = "plushie-iced", default-features = false }
# Native effect handlers. Used by `plushie-renderer-lib`'s
# `effects::native` module, which is the single source of truth for
# native (non-wasm) file dialog, clipboard, and notification effects.
# The renderer binary and `plushie`'s direct mode both consume that
# module, so neither lists these deps directly.
rfd = "0.15"
arboard = "3"
notify-rust = "4"
# Property-test framework used by plushie, plushie-core, and
# plushie-widget-sdk. Identical version, dev-dep only.
proptest = "1"

thiserror = "2"
parking_lot = "0.12"
# Doubly-linked-list-backed LRU map. Image registry uses it so
# touch and evict are both O(1) under the per-image-cap workload.
lru = "0.16"
strum = { version = "0.26", features = ["derive"] }
# Pin usvg explicitly so RustSec advisories against the SVG parser
# surface at the workspace dep resolution layer. iced's svg pipeline
# pulls usvg in transitively; this pin keeps the version stable across
# routine dep updates.
usvg = "=0.45.1"

# Lint configuration. CI also passes RUSTFLAGS="-D warnings" (via justfile)
# which promotes ALL warnings to errors. The lints below catch things that
# should always be errors regardless of CI, and survive Rust toolchain
# upgrades (unlike the brittle #![deny(warnings)] crate attribute).
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_patterns = "deny"

[workspace.lints.clippy]
# CI promotes all warnings to errors via RUSTFLAGS="-D warnings" in the
# justfile. Specific clippy denials go here only when they should block
# local development too (not just CI).

# Require documented `# Panics` / `# Errors` sections on fallible or
# panicking public APIs. Warns rather than denies so localized
# additions can land incrementally.
missing_panics_doc = "warn"
missing_errors_doc = "warn"

# Shipping profile for optimized artifacts. CI and release-build
# pipelines use `cargo build --profile dist`; local `cargo run
# --release` and `cargo test --release` stay on the default
# `release` profile so dev iteration remains fast.
#
# Native crates get `opt-level = 3` (speed); the WASM crate overrides
# to `opt-level = "z"` (size wins for wasm bundles). See
# `docs/wasm-build.md` for WASM-specific size measurements.
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dist.package.plushie-renderer-wasm]
opt-level = "z"

# Local development against an in-flight plushie-iced checkout goes
# through a gitignored `.cargo/config.toml` paths override rather
# than a committed [patch.crates-io] block. Keeps CI and crates.io
# publishes from tripping over a path that might not exist.
