[package]
name = "plushie-ext"
description = "Widget SDK for Plushie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
name = "plushie_ext"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
iced = { version = "0.8", package = "plushie-iced", features = ["advanced", "image", "svg", "canvas", "markdown", "highlighter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
log = "0.4"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false }
sha2 = "0.10"

[dev-dependencies]
proptest = "1"
