[package]
name = "plushie-renderer-lib"
description = "Shared renderer engine for Plushie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
name = "plushie_renderer_lib"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
plushie-ext = { version = "0.6.0", path = "../plushie-ext" }
iced = { version = "0.8", package = "plushie-iced", features = ["advanced", "canvas", "a11y"] }
serde = "1"
serde_json = "1"
smol_str = "0.2"
log = "0.4"
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.8", package = "plushie-iced", features = ["sysinfo"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.4"
