[package]
name = "plushie-renderer-wasm"
description = "WebAssembly bindings for Plushie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
plushie-ext = { version = "0.6.0", path = "../plushie-ext" }
plushie-renderer-lib = { version = "0.6.0", path = "../plushie-renderer-lib" }
iced = { version = "0.8", package = "plushie-iced", features = ["advanced", "canvas", "a11y"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
console_log = "1"
wasmtimer = "0.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
