[package]
name = "plushie"
description = "Desktop GUI framework for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["gui", "desktop", "ui", "framework", "elm"]
categories = ["gui", "rendering"]

[features]
default = ["direct"]
direct = ["dep:plushie-renderer-lib", "dep:rfd", "dep:arboard", "dep:notify-rust", "plushie-widget-sdk/tokio"]
wire = ["dep:tokio", "dep:rmp-serde"]

[dependencies]
plushie-core = { version = "0.6.1", path = "../plushie-core" }
plushie-macros = { version = "0.6.1", path = "../plushie-macros" }
plushie-widget-sdk = { version = "0.6.1", path = "../plushie-widget-sdk" }
plushie-renderer-lib = { version = "0.6.1", path = "../plushie-renderer-lib", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "process", "io-util", "time"], optional = true }
rmp-serde = { version = "1", optional = true }
rfd = { version = "0.15", optional = true }
arboard = { version = "3", optional = true }
notify-rust = { version = "4", optional = true }
log = "0.4"

[lints]
workspace = true
