[package]
name = "cargo-plushie"
description = "Cargo subcommand for building and downloading Plushie renderer binaries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["cargo-plushie", "cargo-subcommand", "cli", "plushie"]
categories.workspace = true
readme = "README.md"

[[bin]]
name = "cargo-plushie"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
cargo_metadata = "0.19"
clap = { version = "4", features = ["derive"] }
plushie-core = { workspace = true }
# ureq is a blocking HTTP client with rustls by default; keeps the
# build tool async-free (no tokio pulled in just for downloads).
ureq = { version = "2", default-features = false, features = ["tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
