[package]
name = "plushie-core-macros"
description = "Proc macros for Plushie types and widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["gui", "desktop", "macros", "types"]
categories = ["gui"]

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
