[package]
name = "plushie-core"
description = "Core types and protocol for Plushie (no iced dependency)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["gui", "desktop", "protocol", "types"]
categories = ["gui"]

[lib]
name = "plushie_core"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
plushie-core-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = "1"
