[package]
name = "plushie-renderer-lib"
description = "Shared renderer engine for Plushie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "plushie_renderer_lib"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
plushie-core = { workspace = true }
plushie-widget-sdk = { workspace = true }
iced = { version = "0.8", package = "plushie-iced", features = ["advanced", "canvas", "a11y"] }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = "0.2"
log = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.8", package = "plushie-iced", features = ["sysinfo"] }
tokio = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.4"
