[package]
name = "plushie-renderer-lib"
description = "Shared renderer engine for Plushie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
publish = false

[lib]
name = "plushie_renderer_lib"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_patterns = "deny"

# Internal crate: documentation of error/panic cases is tracked in-code
# where relevant, not on every fallible helper. The public-surface
# crates (plushie, plushie-widget-sdk, plushie-core) still enforce the
# workspace-level warn.
[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
plushie-core = { workspace = true }
plushie-widget-sdk = { workspace = true }
iced = { workspace = true, features = ["advanced", "canvas", "a11y"] }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = "0.2"
log = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { workspace = true, features = ["thread-pool", "tiny-skia", "x11", "wayland", "sysinfo", "linux-theme-detection"] }
tokio = { workspace = true, features = ["time"] }
# Native effect implementations (file dialogs, clipboard, notifications)
# live here so the renderer binary and the in-process direct mode of the
# `plushie` SDK share one source of truth.
rfd = { workspace = true }
arboard = { workspace = true }
notify-rust = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.4"
