[package]
name = "plushie-renderer-wasm"
description = "WebAssembly bindings for Plushie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_patterns = "deny"

# WASM bindings layer: fallible internals don't need rustdoc sections.
[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
plushie-core = { workspace = true }
plushie-widget-sdk = { workspace = true }
plushie-renderer-lib = { workspace = true }
iced = { workspace = true, features = ["advanced", "canvas", "a11y", "tiny-skia"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# Only the mpsc channel is needed (see lib.rs MSG_RX). Pulling the
# full `futures` umbrella crate here would add async-await machinery
# we get from `iced::futures` and `wasm-bindgen-futures` already, at
# bundle-size cost.
futures-channel = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
console_log = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
