[package]
name = "plushie-renderer"
description = "Native GUI renderer powered by Iced"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "plushie_renderer"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[[bin]]
name = "plushie-renderer"
path = "src/main.rs"

[dependencies]
plushie-core = { workspace = true }
plushie-widget-sdk = { workspace = true }
plushie-renderer-lib = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
iced = { version = "0.8", package = "plushie-iced", features = ["tokio", "advanced", "sysinfo", "a11y"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
iced_test = { version = "0.8", package = "plushie-iced-test" }
sha2 = { workspace = true }
rfd = "0.15"
arboard = "3"
notify-rust = "4"
getrandom = "0.3"
