[package]
name = "plushie-renderer"
description = "Native GUI renderer powered by Iced"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
publish = false

[lib]
name = "plushie_renderer"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_patterns = "deny"

# Binary crate: fallible internals don't need rustdoc sections.
[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[bin]]
name = "plushie-renderer"
path = "src/main.rs"

[dependencies]
plushie-core = { workspace = true }
plushie-widget-sdk = { workspace = true }
plushie-renderer-lib = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
iced = { workspace = true, features = ["tokio", "advanced", "tiny-skia", "x11", "wayland", "sysinfo", "a11y", "linux-theme-detection"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
parking_lot = { workspace = true }
iced_test = { version = "0.8", package = "plushie-iced-test" }
sha2 = { workspace = true }
rfd = { workspace = true }
arboard = { workspace = true }
notify-rust = { workspace = true }
getrandom = "0.3"
