[package]
name = "plushie-widget-sdk"
description = "Widget SDK for Plushie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "plushie_widget_sdk"
path = "src/lib.rs"

[features]
tokio = ["iced/tokio"]

[lints]
workspace = true

[dependencies]
plushie-core = { version = "0.6.1", path = "../plushie-core" }
plushie-core-macros = { version = "0.6.1", path = "../plushie-core-macros" }
iced = { version = "0.8", package = "plushie-iced", features = ["advanced", "image", "svg", "canvas", "markdown", "highlighter", "a11y"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
log = "0.4"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false }
sha2 = "0.10"
# Keep a direct dep on usvg so the workspace-level pin actually
# participates in version resolution. iced pulls usvg transitively;
# this declaration pins the exact version locally and surfaces
# RustSec advisories against the parser at this obvious anchor point.
# Used by the SVG pre-parse guard in widget/svg_widget.rs to bound
# decode work before iced rasterises.
usvg = { workspace = true }

[dev-dependencies]
proptest = "1"
