[package]
name = "plushie"
description = "Desktop GUI framework for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["gui", "desktop", "ui", "framework", "elm"]
categories = ["gui", "rendering"]

[features]
default = ["direct"]
direct = ["dep:plushie-renderer-lib", "dep:plushie-renderer-engine", "dep:plushie-widget-sdk", "plushie-widget-sdk?/tokio"]
wire = ["dep:rmp-serde", "dep:rmpv", "dep:base64", "dep:sha2"]
dev = ["dep:notify", "dep:cargo_metadata"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
plushie-core = { workspace = true }
plushie-core-macros = { workspace = true }
plushie-widget-sdk = { workspace = true, optional = true }
plushie-renderer-engine = { workspace = true, optional = true }
plushie-renderer-lib = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "process", "io-util", "time"] }
rmp-serde = { workspace = true, optional = true }
rmpv = { workspace = true, optional = true }
log = { workspace = true }
base64 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
parking_lot = { workspace = true }
notify = { version = "8", optional = true }
cargo_metadata = { version = "0.19", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
